--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,16 +1,30 @@
 body {
     background-color: lightblue;
-    font-family: Georgia;
+    font-family: inherit;
 }
 
 h1 {
-    color: darkblue;
+    color: steelblue;
+    background-color: lightcyan;
+    border: 3px solid lightcoral ;
+    box-shadow: 10px 10px 5px lightsteelblue;
 }
 
 h2 {
-    color: hotpink;
+    color: lightcoral;
 }
 
+h3 {
+    color: palevioletred;
+    background-color: pink;
+    border : 3px solid lightcyan ;
+    box-shadow : 10px 10px 5px lightsteelblue ;
+}
+h5 {
+    color: red;
+    background: pink;
+    border: 3px dotted red;
+}
 p {
     color: dimgray;
 }
@@ -20,4 +34,17 @@ q {
 }
 br {
 
+}
+dd {
+    color: darkslategray
+}
+#footer {
+    position: absolute;
+    bottom: 10px;
+    background-color: steelblue;
+    width: 100%;
+    height: 30px;
+}
+.center {
+    text-align: center;
 }
